--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "file-loader": "^1.1.4",
     "gulp": "^3.9.1",
     "style-loader": "^0.18.2",
