--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint-plugin-import": "^2.8.0",
     "file-loader": "^1.1.4",
     "gulp": "^3.9.1",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
